# DD4hep

DDG4/python/: DDG4.py
DDG4/python/DDSim/: DD4hepSimulation.py
DDG4/python/DDSim/Helper/: Action.py  Filter.py
examples/OpticalTracker/: CMakeLists.txt  README.md
examples/OpticalTracker/compact/: definitions.xml  pfrich.xml
examples/OpticalTracker/scripts/: build.sh  npsim.py  richsim.py  run_npsim.sh  run_richsim.sh  view.sh
examples/OpticalTracker/src/: PFRICH_geo.cpp
